add hypixel proxy

--- a/SkyProxy.csproj
+++ b/SkyProxy.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <ProjectReference Include="../dev/hypixel.csproj" />
+    <ProjectReference Include="../SkyUpdater/SkyUpdater.csproj" />
   </ItemGroup>
   <PropertyGroup>
     <DefaultItemExcludes>$(DefaultItemExcludes);Client\**\*</DefaultItemExcludes>
