--- a/appsettings.json
+++ b/appsettings.json
@@ -7,15 +7,15 @@
         }
     },
     "AllowedHosts": "*",
-    "DB_CONNECTION": "server=mariadb;user=root;password=takenfrombitnami;database=base",
+    "DB_CONNECTION": "server=mariadb;user=root;password=takenfrombitnami;database=proxy",
     "JAEGER_SAMPLER_TYPE": "ratelimiting",
     "KAFKA_HOST": "kafka",
     "TOPICS": {
-        "LOW_PRICED": "sky-lowpriced",
-        "FLIP_EVENT": "sky-flipevent"
+        "NAME_UPDATE_REQUEST": "sky-name-update-request",
+        "USER_AH_UPDATE": "sky-user-ah-update"
     },
     "JAEGER_SAMPLER_PARAM": "2",
     "MARIADB_VERSION": "10.5.5",
     "JAEGER_AGENT_HOST": "jaeger",
-    "JAEGER_SERVICE_NAME": "sky-base"
+    "JAEGER_SERVICE_NAME": "sky-proxy"
 }
