--- a/appsettings.json
+++ b/appsettings.json
@@ -10,9 +10,12 @@
     "DB_CONNECTION": "server=mariadb;user=root;password=takenfrombitnami;database=proxy",
     "JAEGER_SAMPLER_TYPE": "ratelimiting",
     "KAFKA_HOST": "kafka",
+    "REDIS_HOST": "redis",
     "TOPICS": {
         "NAME_UPDATE_REQUEST": "sky-name-update-request",
-        "USER_AH_UPDATE": "sky-user-ah-update"
+        "USER_AH_UPDATE": "sky-user-ah-update",
+        "SOLD_AUCTION": "sky-soldauction",
+        "NEW_AUCTION": "sky-newauction"
     },
     "JAEGER_SAMPLER_PARAM": "2",
     "MARIADB_VERSION": "10.5.5",
