--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
         }
     },
     "AllowedHosts": "*",
-    "DB_CONNECTION": "server=mariadb;user=root;password=takenfrombitnami;database=proxy",
+    "DB_CONNECTION": "host=localhost;database=proxy;user id=postgres;password=;",
     "JAEGER_SAMPLER_TYPE": "ratelimiting",
     "KAFKA_HOST": "kafka",
     "REDIS_HOST": "redis",
