--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
         }
     },
     "AllowedHosts": "*",
-    "DB_CONNECTION": "host=localhost;database=proxy;user id=postgres;password=;",
+    "DB_CONNECTION": "host=localhost;database=proxy;user id=root;password=;port=26257",
     "JAEGER_SAMPLER_TYPE": "ratelimiting",
     "KAFKA_HOST": "kafka",
     "REDIS_HOST": "redis",
