--- a/SkyProxy.csproj
+++ b/SkyProxy.csproj
@@ -22,6 +22,7 @@
     <PackageReference Include="nunit" Version="3.13.2" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.2.1" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.1.0" />
+    <PackageReference Include="RedisRateLimiting" Version="1.0.10" />
   </ItemGroup>
 
   <ItemGroup>
