set kafka settings

--- a/appsettings.json
+++ b/appsettings.json
@@ -16,6 +16,17 @@
         "SOLD_AUCTION": "sky-soldauction",
         "NEW_AUCTION": "sky-newauction"
     },
+    "KAFKA": {
+      "BROKERS": "kafka:9092",
+      "USERNAME": "",
+      "PASSWORD": "",
+      "TLS": {
+        "CERTIFICATE_LOCATION": "",
+        "CA_LOCATION": "",
+        "KEY_LOCATION": ""
+      },
+      "REPLICATION_FACTOR": "3"
+    },
     "JAEGER_SAMPLER_PARAM": "2",
     "MARIADB_VERSION": "10.5.5",
     "JAEGER_AGENT_HOST": "jaeger",
