Try reloading inactive auction

--- a/appsettings.json
+++ b/appsettings.json
@@ -8,13 +8,14 @@
     },
     "AllowedHosts": "*",
     "DB_CONNECTION": "host=localhost;database=proxy;user id=root;password=;port=26257",
-    "JAEGER_SAMPLER_TYPE": "ratelimiting",
+    "OTEL_EXPORTER_OTLP_TRACES_ENDPOINT": "http://jaeger",
     "REDIS_HOST": "redis",
     "TOPICS": {
         "NAME_UPDATE_REQUEST": "sky-name-update-request",
         "USER_AH_UPDATE": "sky-user-ah-update",
         "SOLD_AUCTION": "sky-soldauction",
-        "NEW_AUCTION": "sky-newauction"
+        "NEW_AUCTION": "sky-newauction",
+        "AUCTION_CHECK": "sky-checkauction"
     },
     "KAFKA": {
       "BROKERS": "kafka:9092",
